<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".MainActivity">

    <com.bucharest.qurio.component.StatisticsBar
        android:id="@+id/statistics_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.bucharest.qurio.view.DifficultyLevelButton
        android:id="@+id/buttonEasy"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:text="@string/easy"
        app:isSelected="true"
        app:layout_constraintTop_toBottomOf="@id/statistics_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <com.bucharest.qurio.view.DifficultyLevelButton
        android:id="@+id/buttonMedium"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:text="@string/medium"
        app:isSelected="false"
        app:layout_constraintTop_toBottomOf="@id/buttonEasy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.bucharest.qurio.view.DifficultyLevelButton
        android:id="@+id/buttonHard"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:text="@string/hard"
        app:isSelected="true"
        app:layout_constraintTop_toBottomOf="@id/buttonMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>