<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="96dp"
    android:layout_height="50dp"
    android:background="@drawable/statistics_lives_background">


    <FrameLayout
        android:id="@+id/add_live_button"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/statistics_lives_card_upgrade_icon_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_plus" />
    </FrameLayout>

    <TextView
        android:id="@+id/lives"
        style="@style/StatisticsCardTitle"
        android:paddingTop="7dp"
        android:text="@string/statistics_lives_card_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lives">

        <ImageView
            android:id="@+id/ic_lives"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/statistics_lives_card_lives_icon_description"
            android:src="@drawable/ic_lives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lives" />

        <TextView
            android:id="@+id/lives_count"
            style="@style/StatisticsCardValue"
            android:layout_marginVertical="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_lives"
            app:layout_constraintStart_toEndOf="@+id/ic_lives"
            app:layout_constraintTop_toBottomOf="@+id/points"
            tools:text="4" />
    </LinearLayout>

    <include layout="@layout/indicator" />

</androidx.constraintlayout.widget.ConstraintLayout>