<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/surface"
    android:padding="24dp">

    <ImageView
        android:id="@+id/no_connection_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_connection_img"
        app:layout_constraintBottom_toTopOf="@id/no_connection_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/no_connection_text"
        style="@style/Title.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.87"
        android:gravity="center"
        android:text="@string/no_connection"
        android:textColor="@color/shade_primary"
        app:layout_constraintBottom_toTopOf="@id/no_connection_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_connection_image" />

    <TextView
        android:id="@+id/no_connection_description"
        style="@style/Body.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0.60"
        android:gravity="center"
        android:text="@string/no_connection_description"
        android:textColor="@color/shade_secondary"
        app:layout_constraintBottom_toTopOf="@id/retry_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_connection_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retry_button"
        style="@style/PrimaryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_connection_description" />

</androidx.constraintlayout.widget.ConstraintLayout>